--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -31,6 +31,8 @@
   <ItemGroup>
     <!-- Allow using `init` and records in .NET Core versions prior to .NET 5 -->
     <PackageReference Include="IsExternalInit" Version="1.0.0" PrivateAssets="All" />
+    <!-- Nullable reference types for netstandard2.0 -->
+    <PackageReference Include="Nullable" Version="1.3.0" PrivateAssets="All" />
   </ItemGroup>
   <!-- <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)/.meta/packageicon.png" Pack="true" PackagePath="/images/" Visible="false" />
