--- a/src/Verlite.Core/Verlite.Core.csproj
+++ b/src/Verlite.Core/Verlite.Core.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Description>Automatic Git versioning with a focus on tags and continuous delivery.</Description>
     <RootNamespace>Verlite</RootNamespace>
   </PropertyGroup>
