--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,6 +11,7 @@
     <!-- CA2225: Don't want operators to have methods.. -->
     <!-- CA1303: Don't localize internal strings. -->
     <NoWarn>$(NoWarn);1591;CA1062;CA2225;CA1303;</NoWarn>
+    <RollForward>major</RollForward>
     <!-- Generate XMLdocs -->
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <!-- Disable system locales -->
