--- a/src/Verlite.MsBuild/buildMultiTargeting/Verlite.MsBuild.targets
+++ b/src/Verlite.MsBuild/buildMultiTargeting/Verlite.MsBuild.targets
@@ -1,6 +1,6 @@
 <!--
 Copyright 2020 Ashleigh Adams
-Copyright 2020 Adam Ralph
+Copyright 2018-2020 Adam Ralph
 
 Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
 
