--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -10,7 +10,9 @@
     <!-- CA1062: Prefer T? for possible nulls. -->
     <!-- CA2225: Don't want operators to have methods.. -->
     <!-- CA1303: Don't localize internal strings. -->
-    <NoWarn>$(NoWarn);1591;CA1062;CA2225;CA1303;</NoWarn>
+    <!-- CA2007: Don't use .ConfigureAwait() -->
+    <!-- CA1032: Exceptional exceptions... -->
+    <NoWarn>$(NoWarn);1591;CA1062;CA2225;CA1303;CA2007;CA1032</NoWarn>
     <RollForward>major</RollForward>
     <!-- Generate XMLdocs -->
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
