--- a/.editorconfig
+++ b/.editorconfig
@@ -32,6 +32,7 @@ indent_style = tab
 indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
+end_of_line = lf
 
 ##########################################
 # File Extension Settings
