--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -44,6 +44,8 @@
   <!-- Automatic versioning -->
   <PropertyGroup>
     <MinVerTagPrefix>v</MinVerTagPrefix>
+    <!-- delete/set to patch the line below once almost out of v0.x.y (preferably once on a beta or rc). -->
+    <MinVerAutoIncrement>minor</MinVerAutoIncrement>
     <MinVerMinimumMajorMinor>0.1</MinVerMinimumMajorMinor>
   </PropertyGroup>
   <ItemGroup>
