Don't add the GPG tag to the GitHub release.

--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -64,9 +64,9 @@ jobs:
         tag="${GITHUB_REF#refs/*/}"
         options=()
 
-        git tag -v --format='%(subject)' "$tag" > msg.txt
+        git tag -v --format='%(contents:subject)' "$tag" > msg.txt
         echo >> msg.txt
-        git tag -v --format='%(body)' "$tag" >> msg.txt
+        git tag -v --format='%(contents:body)' "$tag" >> msg.txt
         options+=("-F" "msg.txt")
 
         if [[ "$(minver --tag-prefix=v --verbosity=e)" == *"-"* ]]; then
