--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -29,7 +29,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Copyright>Copyright 2020 Ashleigh Adams</Copyright>
-    <!-- <PackageIcon>images/packageicon.png</PackageIcon> -->
+    <PackageIcon>images/packageicon.png</PackageIcon>
   </PropertyGroup>
   <ItemGroup>
     <!-- Allow using `init` and records in .NET Core versions prior to .NET 5 -->
@@ -37,9 +37,9 @@
     <!-- Nullable reference types for netstandard2.0 -->
     <PackageReference Include="Nullable" Version="1.3.0" PrivateAssets="All" />
   </ItemGroup>
-  <!-- <ItemGroup>
+  <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)/.meta/packageicon.png" Pack="true" PackagePath="/images/" Visible="false" />
-  </ItemGroup> -->
+  </ItemGroup>
 
   <!-- Automatic versioning -->
   <PropertyGroup>
