Updated Actions to run Integration Tests.

--- a/.github/continuous-delivery.yml
+++ b/.github/continuous-delivery.yml
@@ -9,7 +9,8 @@ on:
 defaults: *default-defaults
 
 jobs:
-  build:
+  build-and-test:
+    name: Build & Test
     runs-on: ubuntu-latest
     steps:
       - *checkout
@@ -22,4 +23,25 @@ jobs:
       - *pack
       - *publish-codecov
       - *upload-artifacts
+  integration-tests:
+    name: Integration Tests
+    needs: build-and-test
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    steps:
+      - *checkout
+      - *setup-dotnet5
+      - *setup-nuget
+      - *setup-nuget-cache
+      - *run-integration-tests
+  publish:
+    name: Publish
+    needs: integration-tests
+    runs-on: ubuntu-latest
+    steps:
+      - *setup-nuget
+      - *setup-nuget-cache
+      - *download-artifacts
       - *publish-github
