--- a/.github/continuous-integration.yml
+++ b/.github/continuous-integration.yml
@@ -13,7 +13,8 @@ on:
 defaults: *default-defaults
 
 jobs:
-  build:
+  build-and-test:
+    name: Build & Test
     runs-on: ubuntu-latest
     steps:
     - *checkout
@@ -26,3 +27,17 @@ jobs:
     - *pack
     - *publish-codecov
     - *upload-artifacts
+  
+  integration-tests:
+    name: Integration Tests
+    needs: build-and-test
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    steps:
+      - *checkout
+      - *setup-dotnet5
+      - *setup-nuget
+      - *setup-nuget-cache
+      - *run-integration-tests
