CI/CD: Mark the integration test script as executable.

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -97,7 +97,9 @@ jobs:
           ${{ runner.os }}-nuget-
 
     - name: Run Integration Tests
-      run: ./tests/IntegrationTests/run.sh
+      run: |
+        chmod +x ./tests/IntegrationTests/run.sh
+        ./tests/IntegrationTests/run.sh
 
 publish:
     name: Publish
