--- a/.github/shared.yml
+++ b/.github/shared.yml
@@ -74,6 +74,8 @@ definitions:
   
   run-integration-tests: &run-integration-tests
     name: Run Integration Tests
-    run: ./tests/IntegrationTests/run.sh
+    run: |
+      chmod +x ./tests/IntegrationTests/run.sh
+      ./tests/IntegrationTests/run.sh
 
 #</shared>
