--- a/.github/shared.yml
+++ b/.github/shared.yml
@@ -16,6 +16,12 @@ definitions:
     with:
       dotnet-version: 5.0.x
 
+  setup-dotnet3-1: &setup-dotnet3-1
+    name: Setup .NET 3.1
+    uses: actions/setup-dotnet@v1
+    with:
+      dotnet-version: 3.1.x
+
   setup-nuget: &setup-nuget
     name: Setup NuGet
     run: |
