Ignore certain paths for automatic deploys.

--- a/.github/continuous-delivery.yml
+++ b/.github/continuous-delivery.yml
@@ -5,6 +5,12 @@ on:
     branches:
     - master
     - support/*
+    paths-ignore:
+    - 'docs/**'
+    - 'README.md'
+    - '.editorconfig'
+    - '.gitattributes'
+    - '.gitignore'
 
 defaults: *default-defaults
 
