Integration tests: removed the dependency on  perl for MacOS

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -7,6 +7,12 @@ on:
     branches:
     - master
     - support/*
+    paths-ignore:
+    - docs/**
+    - README.md
+    - .editorconfig
+    - .gitattributes
+    - .gitignore
 
 defaults:
   run:
