--- a/.github/continuous-integration.yml
+++ b/.github/continuous-integration.yml
@@ -5,10 +5,12 @@ on:
     branches:
     - master
     - support/*
-#   paths-ignore:
-#     - 'README.md'
-#     - 'CODEOWNERS'
-#     - 'docs/**'
+    paths-ignore:
+    - 'docs/**'
+    - 'README.md'
+    - '.editorconfig'
+    - '.gitattributes'
+    - '.gitignore'
 
 defaults: *default-defaults
 
@@ -27,7 +29,6 @@ jobs:
     - *pack
     - *publish-codecov
     - *upload-artifacts
-  
   integration-tests:
     name: Integration Tests
     needs: build-and-test
