--- a/.github/continuous-delivery.yml
+++ b/.github/continuous-delivery.yml
@@ -48,6 +48,7 @@ jobs:
     needs: integration-tests
     runs-on: ubuntu-latest
     steps:
+    - *checkout
     - *setup-nuget
     - *setup-nuget-cache
     - *download-artifacts
