--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -72,54 +72,27 @@ jobs:
         path: |
           artifacts/*
 
-  #integration-tests:
-  #  name: Integration Tests
-  #  needs: build-and-test
-  #  runs-on: ${{ matrix.os }}
-  #  strategy:
-  #    matrix:
-  #      os: [ubuntu-latest, windows-latest, macos-latest]
-  #  steps:
-  #  - uses: actions/checkout@v2
-  #    with:
-  #      fetch-depth: '0'
-  #
-  #  - name: Setup .NET 5
-  #    uses: actions/setup-dotnet@v1
-  #    with:
-  #      dotnet-version: 5.0.x
-  #
-  #  - name: Setup .NET 3.1
-  #    uses: actions/setup-dotnet@v1
-  #    with:
-  #      dotnet-version: 3.1.x
-  #
-  #  - name: Setup NuGet
-  #    run: |
-  #      dotnet nuget update source github --store-password-in-clear-text --username AshleighAdams --password ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-  #
-  #  - name: NuGet Restore Cache
-  #    uses: actions/cache@v2
-  #    with:
-  #      path: ~/.nuget/packages
-  #      key: |
-  #        ${{ runner.os }}-nuget-${{ hashFiles('**/Directory.Build.props') }}-${{ hashFiles('**/*.csproj') }}
-  #      restore-keys: |
-  #        ${{ runner.os }}-nuget-
-  #
-  #  - name: Run Integration Tests
-  #    run: |
-  #      chmod +x ./tests/IntegrationTests/run.sh
-  #      ./tests/IntegrationTests/run.sh
-
-  publish:
-    name: Publish
+  integration-tests:
+    name: Integration Tests
     needs: build-and-test
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: '0'
+
+    - name: Setup .NET 5
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.x
+
+    - name: Setup .NET 3.1
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.x
 
     - name: Setup NuGet
       run: |
@@ -134,13 +107,35 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-nuget-
 
+    - name: Run Integration Tests
+      run: |
+        chmod +x ./tests/IntegrationTests/run.sh
+        ./tests/IntegrationTests/run.sh
+
+  publish:
+    name: Publish
+    needs: integration-tests
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: '0'
+
+    - name: Setup .NET 5
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.x
+
+    - name: Setup NuGet
+      run: |
+        dotnet nuget update source github --store-password-in-clear-text --username AshleighAdams --password ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+
     - name: Download Artifacts
       uses: actions/download-artifact@v2
 
     - name: Publish Nuget GitHub
-      run: |
-        find .
-        dotnet nuget push artifacts/**.nupkg -k ${GITHUB_TOKEN} -s github --skip-duplicate --no-symbols 1
+      run: dotnet nuget push ./artifacts/**.nupkg -k ${GITHUB_TOKEN} -s github --skip-duplicate
+        --no-symbols 1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
