Okay, this voodoo should do it.

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -134,7 +134,7 @@ jobs:
       uses: actions/download-artifact@v2
 
     - name: Publish Nuget GitHub
-      run: dotnet nuget push ./artifacts/**.nupkg -k ${GITHUB_TOKEN} -s github --skip-duplicate
+      run: dotnet nuget push 'artifacts/*.nupkg' -k ${GITHUB_TOKEN} -s github --skip-duplicate
         --no-symbols 1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
