--- a/.github/continuous-integration.yml
+++ b/.github/continuous-integration.yml
@@ -34,6 +34,7 @@ jobs:
     needs: build-and-test
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
