--- a/tests/IntegrationTests/tests/arg-escaping/src/TestEscaping/TestEscaping.csproj
+++ b/tests/IntegrationTests/tests/arg-escaping/src/TestEscaping/TestEscaping.csproj
@@ -4,10 +4,14 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
+
+    <IsPackable>false</IsPackable>
+    <PublishSingleFile>true</PublishSingleFile>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Verlite.Core" Version="0.0.0" PrivateAssets="All" />
+    <PackageReference Include="Verlite.Core" Version="0.0.0" />
   </ItemGroup>
 
 </Project>
