--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -36,6 +36,7 @@ jobs:
     - name: Setup NuGet
       run: |
         dotnet nuget update source github --store-password-in-clear-text --username AshleighAdams --password ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        dotnet nuget enable source github
 
     - name: NuGet Restore Cache
       uses: actions/cache@v2
@@ -97,6 +98,7 @@ jobs:
     - name: Setup NuGet
       run: |
         dotnet nuget update source github --store-password-in-clear-text --username AshleighAdams --password ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        dotnet nuget enable source github
 
     - name: NuGet Restore Cache
       uses: actions/cache@v2
@@ -129,6 +131,7 @@ jobs:
     - name: Setup NuGet
       run: |
         dotnet nuget update source github --store-password-in-clear-text --username AshleighAdams --password ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        dotnet nuget enable source github
 
     - name: Download Artifacts
       uses: actions/download-artifact@v2
