--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -36,6 +36,7 @@ jobs:
     - name: Setup NuGet
       run: |
         dotnet nuget update source github --store-password-in-clear-text --username AshleighAdams --password ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        dotnet nuget enable source github
 
     - name: NuGet Restore Cache
       uses: actions/cache@v2
@@ -98,6 +99,7 @@ jobs:
     - name: Setup NuGet
       run: |
         dotnet nuget update source github --store-password-in-clear-text --username AshleighAdams --password ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        dotnet nuget enable source github
 
     - name: NuGet Restore Cache
       uses: actions/cache@v2
