--- a/NuGet.config
+++ b/NuGet.config
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
     <add key="github" value="https://nuget.pkg.github.com/AshleighAdams/index.json" />
   </packageSources>
-   <activePackageSource>
-    <add key="All" value="(Aggregate source)" />
-  </activePackageSource>
+  <disabledPackageSources>
+    <add key="github" value="true" />
+  </disabledPackageSources>
 </configuration>
