--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Setup NuGet
       run: |
         dotnet nuget update source github --store-password-in-clear-text --username AshleighAdams --password ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        dotnet nuget enable source github
 
     - name: NuGet Restore Cache
       uses: actions/cache@v2
