Okay, this should actually fix Stryker reporting now.

--- a/.github/shared.yml
+++ b/.github/shared.yml
@@ -46,12 +46,15 @@ definitions:
       dotnet tool install --global dotnet-stryker --version 0.22.0
       cd tests/UnitTests
       if [[ "$GITHUB_REF" == "refs/heads/master" ]]; then
-        dotnet stryker --reporters "['dashboard', 'progress']" --dashboard-project "github.com/${GITHUB_REPOSITORY}"
+        dotnet stryker \
+          --reporters "['html', 'dashboard', 'progress']" \
+          --dashboard-project "github.com/${GITHUB_REPOSITORY}" \
+          --dashboard-version "master"
       else
         dotnet stryker --reporters "['html', 'progress']"
-        mkdir -p ../../artifacts
-        find StrykerOutput -name mutation-report.html -exec cp {} ../../artifacts/ \;
       fi
+      mkdir -p ../../artifacts
+      find StrykerOutput -name mutation-report.html -exec cp {} ../../artifacts/ \;
     env:
       STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
 
