--- a/src/Verlite.MsBuild/Verlite.MsBuild.csproj
+++ b/src/Verlite.MsBuild/Verlite.MsBuild.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <OutputType>Exe</OutputType>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <OutputType>Library</OutputType>
     <RootNamespace>Verlite.MsBuild</RootNamespace>
     <Description>Lightweight automatic versioning via Git tags for continuous delivery and SDK-style projects.</Description>
     
-    <NoWarn>$(NoWarn);NU5100;NU5105</NoWarn>
+    <NoWarn>$(NoWarn);NU5100;NU5105;CS1591</NoWarn>
     <DevelopmentDependency>true</DevelopmentDependency>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
@@ -24,7 +24,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Verlite.CLI\Verlite.CLI.csproj" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Verlite.Core\Verlite.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Update="Microsoft.NETCore.App" PrivateAssets="All" />
   </ItemGroup>
 
