Verlite.MsBuild: Added VerliteBashPath for filtering tags to use.
This allows us to remove the batch script and use bash everywhere.
Will attempt to autodetect Git's Bash path on Windows OSes.

--- a/tests/IntegrationTests/tests/msbuild/src/TagFilter/TagFilter.csproj
+++ b/tests/IntegrationTests/tests/msbuild/src/TagFilter/TagFilter.csproj
@@ -3,12 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0</TargetFrameworks>
     <VerliteTagPrefix>f</VerliteTagPrefix>
-    
-    <VerliteFilterTags Condition="'$(OS)' != 'Windows_NT'">
-      "$(MSBuildThisFileDirectory.Replace('\', '\\').Replace('"', '\\"'))tag-filter.sh"
-    </VerliteFilterTags>
-    <VerliteFilterTags Condition="'$(OS)' == 'Windows_NT'">
-      "$(MSBuildThisFileDirectory.Replace('\', '\\').Replace('"', '\\"'))tag-filter.bat"
+
+    <!-- Directory.Build.props -->
+    <VerliteFilterTags>
+      $(VerliteBashPath) "$(MSBuildThisFileDirectory.Replace('\', '\\').Replace('"', '\\"'))tag-filter.sh"
     </VerliteFilterTags>
   </PropertyGroup>
 
