--- a/.github/deploy-release.yml
+++ b/.github/deploy-release.yml
@@ -19,13 +19,15 @@ jobs:
     - name: Setup MinVer
       run: |
         git fetch --tags --force
+        git checkout "${GITHUB_REF#refs/*/}"
         dotnet tool install --global minver-cli --version 2.5.0
 
-    - name: Verify Tag
+    - name: 'Verify Tag'
       run: |
         curl https://github.com/AshleighAdams.gpg | gpg --import
+        echo "BDE36CC9850449DD77ED51CFBF8DF4780B7BD0AD:6:" | gpg --import-ownertrust # Ashleigh Adams
         git tag --verify "${GITHUB_REF#refs/*/}"
-        [[ "$(minver --tag-prefix=v)" == "v${GITHUB_REF#refs/*/}" ]] # error out if the versions don't match
+        [[ "v$(minver --tag-prefix=v)" == "${GITHUB_REF#refs/*/}" ]] # error out if the versions don't match
 
     - *restore
     - *build
