Fixed type, don't CD/CI issue and PR templates.

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -13,6 +13,8 @@ on:
     - .editorconfig
     - .gitattributes
     - .gitignore
+    - .github/ISSUE_TEMPLATE/**
+    - .github/pull_request_template.md
 
 defaults:
   run:
