--- a/.github/continuous-delivery.yml
+++ b/.github/continuous-delivery.yml
@@ -11,6 +11,8 @@ on:
     - '.editorconfig'
     - '.gitattributes'
     - '.gitignore'
+    - '.github/ISSUE_TEMPLATE/**'
+    - '.github/pull_request_template.md'
 
 defaults: *default-defaults
 
