--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,6 @@ updates:
 - package-ecosystem: nuget
   directory: "/"
   schedule:
-    interval: monthly
+    interval: weekly
     time: "11:00"
   open-pull-requests-limit: 10
