--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -14,9 +14,13 @@ name: "CodeQL"
 on:
   push:
     branches: [ master, support/* ]
+    paths:
+    - src/**
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ master ]
+    paths:
+    - src/**
   schedule:
     - cron: '40 17 * * 0'
 
