--- a/src/Verlite.Core/Verlite.Core.csproj
+++ b/src/Verlite.Core/Verlite.Core.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Description>Core primitives and logic for automatic versioning via Git tags.</Description>
     <RootNamespace>Verlite</RootNamespace>
   </PropertyGroup>
