Refactor: Add `IRepoInspector.GetParents()`, deprecating `GetParent()`.
This is required for #40, as fixing that issue will require walking all parents, not just the first parent.

The `GitRepoInspector`'s implementation of `GetParents()` matches the current behavior of only using the first parent. This will be fixed in 2.0.0.

--- a/tests/UnitTests/UnitTests.csproj
+++ b/tests/UnitTests/UnitTests.csproj
@@ -10,8 +10,11 @@
 
 
   <ItemGroup>
+    <Compile Remove="StrykerOutput\**" />
     <Compile Remove="TestResults\**" />
+    <EmbeddedResource Remove="StrykerOutput\**" />
     <EmbeddedResource Remove="TestResults\**" />
+    <None Remove="StrykerOutput\**" />
     <None Remove="TestResults\**" />
   </ItemGroup>
 
