--- a/.github/deploy-release.yml
+++ b/.github/deploy-release.yml
@@ -1,9 +1,9 @@
 name: Release
 
 on:
-  push:
-    tags:
-    - v*
+  release:
+    types:
+      - published
 
 defaults: *default-defaults
 
@@ -24,9 +24,6 @@ jobs:
 
     - name: 'Verify Tag'
       run: |
-        curl https://github.com/AshleighAdams.gpg | gpg --import
-        echo "BDE36CC9850449DD77ED51CFBF8DF4780B7BD0AD:6:" | gpg --import-ownertrust # Ashleigh Adams
-        git tag --verify "${GITHUB_REF#refs/*/}"
         [[ "v$(minver --tag-prefix=v)" == "${GITHUB_REF#refs/*/}" ]] # error out if the versions don't match
 
     - *restore
@@ -41,21 +38,14 @@ jobs:
         tag="${GITHUB_REF#refs/*/}"
         options=()
 
-        git tag -v --format='%(contents:subject)' "$tag" > msg.txt
-        echo >> msg.txt
-        git tag -v --format='%(contents:body)' "$tag" >> msg.txt
-        options+=("-F" "msg.txt")
-
-        if [[ "$(minver --tag-prefix=v --verbosity=e)" == *"-"* ]]; then
-          options+=("--prerelease")
-        fi
+        options+=("-m" "") # leave the title and body unchanged
 
         IFS=$'\n';
         for asset in $(find ./artifacts -name "*.nupkg"); do
           options+=("-a" "$asset")
         done
 
-        hub release create "${options[@]}" "$tag"
+        hub release edit "${options[@]}" "$tag"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
