Remove deprecated APIs
- Removed `GitRepoInspector.FromPath()` compatibility functions.
- Removed `IRepoInspector.FetchTag(tag, remote)`.
- Removed `IRepoInspector.GetParent(commit)`.
- Removed `VersionCalculationOptions.MinimiumVersion`.
- Added "remote" options to pass to the new core API.

Meta: codecov only status reports on PRs.

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,1 +1,9 @@
 comment: false
+coverage:
+  status:
+    project:
+      default:
+        only_pulls: true
+    patch:
+      default:
+        only_pulls: true
