--- a/.github/shared.yml
+++ b/.github/shared.yml
@@ -43,7 +43,7 @@ definitions:
   mutation-test: &mutation-test
     name: Mutation Test
     run: |
-      dotnet tool install --global dotnet-stryker --version 0.22.0
+      dotnet tool install --global dotnet-stryker
       cd tests/UnitTests
       if [[ "$GITHUB_REF" == "refs/heads/master" ]]; then
         dotnet stryker \
