--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -77,7 +77,7 @@ jobs:
 
     - name: Mutation Test
       run: |
-        dotnet tool install --global dotnet-stryker --version 0.22.0
+        dotnet tool install --global dotnet-stryker
         cd tests/UnitTests
         if [[ "$GITHUB_REF" == "refs/heads/master" ]]; then
           dotnet stryker \
