Update Stryker run options.

--- a/.github/shared.yml
+++ b/.github/shared.yml
@@ -46,10 +46,7 @@ definitions:
       dotnet tool install --global dotnet-stryker
       cd tests/UnitTests
       if [[ "$GITHUB_REF" == "refs/heads/master" ]]; then
-        dotnet stryker \
-          --reporter html --reporter dashboard --reporter progress \
-          --dashboard-project "github.com/${GITHUB_REPOSITORY}" \
-          --dashboard-version "master"
+        dotnet stryker --reporter html --reporter dashboard --reporter progress
       else
         dotnet stryker --reporter html --reporter progress
       fi
