--- a/src/Verlite.Core/Verlite.Core.csproj
+++ b/src/Verlite.Core/Verlite.Core.csproj
@@ -3,5 +3,9 @@
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Description>Core primitives and logic for automatic versioning via Git tags.</Description>
     <RootNamespace>Verlite</RootNamespace>
+    <PackageReadme>README.md</PackageReadme>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="/" />
+  </ItemGroup>
 </Project>
