--- a/src/Verlite.Core/Verlite.Core.csproj
+++ b/src/Verlite.Core/Verlite.Core.csproj
@@ -3,7 +3,7 @@
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Description>Core primitives and logic for automatic versioning via Git tags.</Description>
     <RootNamespace>Verlite</RootNamespace>
-    <PackageReadme>README.md</PackageReadme>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <None Include="README.md" Pack="true" PackagePath="/" />
