--- a/.github/shared.yml
+++ b/.github/shared.yml
@@ -43,7 +43,7 @@ definitions:
   mutation-test: &mutation-test
     name: Mutation Test
     run: |
-      dotnet tool install --global dotnet-stryker
+      dotnet tool install --global dotnet-stryker --version 1.2.2 # TODO: remove the version constraint
       cd tests/UnitTests
       if [[ "$GITHUB_REF" == "refs/heads/master" ]]; then
         dotnet stryker --reporter html --reporter dashboard --reporter progress
