--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -77,7 +77,7 @@ jobs:
 
     - name: Mutation Test
       run: |
-        dotnet tool install --global dotnet-stryker
+        dotnet tool install --global dotnet-stryker --version 1.2.2 # TODO: remove the version constraint
         cd tests/UnitTests
         if [[ "$GITHUB_REF" == "refs/heads/master" ]]; then
           dotnet stryker --reporter html --reporter dashboard --reporter progress
