Revert "Fixed pushing packages in .NET 6.0.200"
This reverts commit ecc7d330c355000fa8851fd801ed33113c4fa81d.

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -148,7 +148,7 @@ jobs:
 
     - name: Publish Nuget GitHub
       run: dotnet nuget push 'artifacts/*.nupkg' -k ${GITHUB_TOKEN} -s github --skip-duplicate
-        --no-symbols
+        --no-symbols 1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
