Include .NET 6/7 for Stryker

--- a/.github/deploy-release.yml
+++ b/.github/deploy-release.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - *checkout
-    - *setup-dotnet5
+    - *setup-dotnet
     - *setup-nuget
 
     - name: Setup MinVer
