--- a/.github/continuous-delivery.yml
+++ b/.github/continuous-delivery.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - *checkout
-    - *setup-dotnet5
+    - *setup-dotnet
     - *restore
     - *build
     - *test
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - *checkout
-    - *setup-dotnet5
+    - *setup-dotnet
     - *mutation-test
     - *upload-artifacts
   integration-tests:
@@ -48,8 +48,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
     - *checkout
-    - *setup-dotnet5
-    - *setup-dotnet3-1
+    - *setup-dotnet
     - *run-integration-tests
   publish:
     name: 'Publish'
@@ -57,7 +56,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - *checkout
-    - *setup-dotnet5
+    - *setup-dotnet
     - *setup-nuget
     - *download-artifacts
     - *publish-github
