--- a/.github/continuous-integration.yml
+++ b/.github/continuous-integration.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - *checkout
-    - *setup-dotnet5
+    - *setup-dotnet
     - *restore
     - *build
     - *test
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - *checkout
-    - *setup-dotnet5
+    - *setup-dotnet
     - *mutation-test
     - *upload-artifacts
   integration-tests:
@@ -48,6 +48,5 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
     - *checkout
-    - *setup-dotnet5
-    - *setup-dotnet3-1
+    - *setup-dotnet
     - *run-integration-tests
