--- a/.github/shared.yml
+++ b/.github/shared.yml
@@ -10,17 +10,15 @@ definitions:
     with:
       fetch-depth: '0'
 
-  setup-dotnet5: &setup-dotnet5
-    name: Setup .NET 5
-    uses: actions/setup-dotnet@v1
+  setup-dotnet: &setup-dotnet
+    name: Setup .NET
+    uses: actions/setup-dotnet@v3
     with:
-      dotnet-version: 5.0.x
-
-  setup-dotnet3-1: &setup-dotnet3-1
-    name: Setup .NET 3.1
-    uses: actions/setup-dotnet@v1
-    with:
-      dotnet-version: 3.1.x
+      dotnet-version: |
+        3.1.x
+        5.0.x
+        6.x
+        7.x
 
   setup-nuget: &setup-nuget
     name: Setup NuGet
