--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -30,10 +30,14 @@ jobs:
       with:
         fetch-depth: '0'
 
-    - name: Setup .NET 5
-      uses: actions/setup-dotnet@v1
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: |
+          3.1.x
+          5.0.x
+          6.x
+          7.x
 
     - name: Restore
       run: dotnet restore
@@ -70,10 +74,14 @@ jobs:
       with:
         fetch-depth: '0'
 
-    - name: Setup .NET 5
-      uses: actions/setup-dotnet@v1
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: |
+          3.1.x
+          5.0.x
+          6.x
+          7.x
 
     - name: Mutation Test
       run: |
@@ -109,15 +117,14 @@ jobs:
       with:
         fetch-depth: '0'
 
-    - name: Setup .NET 5
-      uses: actions/setup-dotnet@v1
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 5.0.x
-
-    - name: Setup .NET 3.1
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.x
+        dotnet-version: |
+          3.1.x
+          5.0.x
+          6.x
+          7.x
 
     - name: Run Integration Tests
       run: |
@@ -133,10 +140,14 @@ jobs:
       with:
         fetch-depth: '0'
 
-    - name: Setup .NET 5
-      uses: actions/setup-dotnet@v1
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: |
+          3.1.x
+          5.0.x
+          6.x
+          7.x
 
     - name: Setup NuGet
       run: |
