--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -21,10 +21,14 @@ jobs:
       with:
         fetch-depth: '0'
 
-    - name: Setup .NET 5
-      uses: actions/setup-dotnet@v1
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: |
+          3.1.x
+          5.0.x
+          6.x
+          7.x
 
     - name: Setup NuGet
       run: |
